--- a/client/app/src/app/videojuego/videojuego-detail/videojuego-detail.component.html
+++ b/client/app/src/app/videojuego/videojuego-detail/videojuego-detail.component.html
@@ -1,4 +1,4 @@
-<mat-card class="dashboard-card" *ngIf="datos"  >
+<!-- <mat-card class="dashboard-card" *ngIf="datos"  >
     <mat-card-header>
       <mat-card-title>
         {{datos.nombre }}
@@ -14,4 +14,4 @@
       </ul>
     </mat-card-content>
   </mat-card>
-  
+   -->
