--- a/client/app/src/app/videojuego/videojuego-diag/videojuego-diag.component.html
+++ b/client/app/src/app/videojuego/videojuego-diag/videojuego-diag.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button class="close-button" [mat-dialog-close]="true">
+<!--<button mat-icon-button class="close-button" [mat-dialog-close]="true">
   <mat-icon class="close-icon" color="primary">close</mat-icon>
 </button>
 <div *ngIf="datos">
@@ -14,3 +14,4 @@
 
   <mat-dialog-actions> </mat-dialog-actions>
 </div>
+-->
