--- a/client/app/src/app/videojuego/videojuego-all/videojuego-all.component.html
+++ b/client/app/src/app/videojuego/videojuego-all/videojuego-all.component.html
@@ -1,7 +1,7 @@
 <mat-card class="full-width">
   <!-- Titulo del Card -->
   <mat-card-title>
-    Aplicaciones
+    Videojuegos
     <a
       mat-fab
       matTooltip="Crear Videojuego"
@@ -14,21 +14,50 @@
   <mat-card-content>
     <!-- Table -->
     <div class="mat-elevation-z8">
-      <table mat-table class="full-width-table" matSort aria-label="Elements">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="full-width-table"
+        matSort
+        aria-label="Elements"
+      >
         <!-- Columna nombre -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-          <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+          <td mat-cell *matCellDef="let row">{{ row.nombre }}</td>
         </ng-container>
 
         <!-- Columna precio -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        <ng-container matColumnDef="precio">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
+          <td mat-cell *matCellDef="let row">{{ row.precio }}</td>
         </ng-container>
         <!-- Columna acciones -->
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let row">
+            <button
+              mat-mini-fab
+              color="accent"
+              matTooltip="Actualizar Videjuego"
+              aria-label="Actualizar Videjuego"
+              color="primary"
+            >
+              <mat-icon class="mat-18">edit</mat-icon>
+            </button>
 
-        
+            <button
+              mat-mini-fab
+              color="accent"
+              matTooltip="Detalle Videjuego"
+              aria-label="Detalle Videjuego"
+              color="primary"
+            >
+              <mat-icon class="mat-18">info </mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
@@ -37,9 +66,9 @@
         #paginator
         [length]="dataSource?.data?.length"
         [pageIndex]="0"
-        [pageSize]="10"
-        [pageSizeOptions]="[5, 10, 20]"
-        aria-label="Select page"
+        [pageSize]="3"
+        [pageSizeOptions]="[3, 5, 10]"
+        aria-label="Seleccione una página"
       >
       </mat-paginator>
     </div>
