--- a/client/app/src/app/videojuego/videojuego-all/videojuego-all.component.html
+++ b/client/app/src/app/videojuego/videojuego-all/videojuego-all.component.html
@@ -50,8 +50,9 @@
               mat-mini-fab
               color="accent"
               matTooltip="Detalle Videjuego"
-              aria-label="Detalle Videjuego"
+              aria-label="Detalle Videjuego" 
               color="primary"
+              (click)="detalle(row.id)"
             >
               <mat-icon class="mat-18">info </mat-icon>
             </button>
